--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@apollo/client": "^3.7.0",
     "@material-tailwind/react": "^1.2.4",
+    "chart.js": "^3.9.1",
     "graphql": "^16.6.0",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
